--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -38,6 +38,15 @@ header {
     background: var(--color-primary);
 }
 
+.header__socials__mobile{
+    display: flex;
+    visibility: visible;
+    justify-content: center;
+    gap: 3rem;
+    padding-top: 2rem;
+    font-size: 2rem;
+}
+
 /******************** ME **********************/
 
 .me {
@@ -46,18 +55,48 @@ header {
     height: 38 rem;
     position: absolute;
     left: calc(50% - 11rem);
-    margin-top: 4rem;
+    margin-top: 2rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem;
 }
 
 /******************* SCROLL DOWN *****************/
-.scroll__down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 5rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
+.scroll__down, .header__socials {
+    visibility: hidden;
+}
+
+
+
+/*********** MEDIA QUERIES (medium) ***************/
+@media screen and (min-width: 600px) {
+
+    .scroll__down {
+        visibility: visible;
+        position: absolute;
+        right: -2.3rem;
+        bottom: 5rem;
+        transform: rotate(90deg);
+        font-weight: 300;
+        font-size: 0.9rem;
+    }
+    .header__socials {
+        visibility: visible;
+    }
+
+    .header__socials__mobile{
+        visibility: hidden;
+        display: none;
+    }
+    
+    .me {
+        margin-top: 4rem;
+    }
+}
+
+
+/*********** MEDIA QUERIES (long) ***************/
+
+@media screen and (min-width: 1024px) {
+
 }
