--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,11 +1,12 @@
 .about__container {
     display: grid;
-    grid-template-columns: 35% 50%;
-    gap: 15%;
+    grid-template-columns: 1fr;
+    gap: 0;
 }
 
 .about__me {
-    width: 100%;
+    width: 65%;
+    margin: 0 auto 3rem;
     aspect-ratio: 1/1;
     border-radius: 2rem;
     background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
@@ -26,8 +27,8 @@
 
 .about__cards {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
 }
 
 .about__card {
@@ -60,7 +61,47 @@
 }
 
 .about__content p {
-    margin: 2rem 0 2.6rem;
+    margin: 1.5rem 0;
     color: var(--color-light);
+    text-align: center;
 }
 
+
+/*********** MEDIA QUERIES (medium) ***************/
+@media screen and (min-width: 600px) {
+    .about__me {
+        width:50%;
+        margin: 2rem auto 4rem;
+    }
+
+    .about__content p {
+        margin: 1rem 0 1.5rem;
+    }
+
+}
+
+
+/*********** MEDIA QUERIES (long) ***************/
+
+@media screen and (min-width: 1024px) {
+
+    .about__container {
+        display: grid;
+        grid-template-columns: 35% 50%;
+        gap: 15%;
+    }
+
+    .about__me {
+        width: 100%;
+    }
+
+    .about__cards {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
+    }
+
+    .about__content p {
+        margin: 2rem 0 2.6rem;
+    }
+    
+}
