--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -60,6 +60,10 @@
     color: var(--color-light);
 }
 
+.about__content {
+    text-align: center;
+}
+
 .about__content p {
     margin: 1.5rem 0;
     color: var(--color-light);
