--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,7 +1,8 @@
 .experience__container {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 2rem;
+    /* gap: 2rem; */
+    gap: 1rem;
 }
 
 .experience__container > div {
@@ -9,9 +10,8 @@
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
-    width: 80%;
-    padding: 2rem;
-    margin: 0 auto;
+    width: 100%;
+    padding: 2rem 1rem;
 }
 
 
@@ -30,7 +30,7 @@
 
 .experience__content {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     row-gap: 2rem;
 }
 
@@ -48,12 +48,17 @@
 /*********** MEDIA QUERIES (medium) ***************/
 @media screen and (min-width: 600px) {
     .experience__container > div {
-        padding: 2.4rem 5rem;
-        width: 100%;
+        padding: 2rem;
+        width: 80%;
+        margin: 0 auto;  
     }
 
     .experience__container {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+
+    .experience__content {
+        padding: 1rem;
     }
 
 
@@ -64,7 +69,16 @@
 
 @media screen and (min-width: 1024px) {
 
+    .experience__container > div {
+        width: 90%;
+        padding: 2rem;
+        margin: 0 auto;
+    } 
+
     .experience__content {
+        grid-template-columns: 1fr 1fr;
+    }
+    .experience__container {
         grid-template-columns: 1fr 1fr;
     }
 
