--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,8 +1,6 @@
 .container.contact__container {
-    width: 58%;
-    display: grid;
-    grid-template-columns: 30% 58%;
-    gap: 12%;
+    width: 80%;
+    gap: 2rem;
 }
 
 .contact__options {
@@ -47,6 +45,7 @@ form {
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
+    margin-top: 2rem;    
 }
 
 input, textarea {
@@ -63,6 +62,10 @@ input, textarea {
 
 /*********** MEDIA QUERIES (medium) ***************/
 @media screen and (min-width: 600px) {
+    .container.contact__container{
+        grid-template-columns: 1fr;
+        width: 58%;
+    }
 
 }
 
@@ -70,5 +73,14 @@ input, textarea {
 /*********** MEDIA QUERIES (long) ***************/
 
 @media screen and (min-width: 1024px) {
+    .container.contact__container {
+        width: var(--container-width-lg);
+        display: grid;
+        grid-template-columns: 30% 58%;
+        gap: 12%;
+    }
+    form {
+        margin-top: 0;
+    }
 
 }
