--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@
 }
 
 :root{
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
-    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-bg: #05386B;
+    --color-bg-variant: #379683;
+    --color-primary: #5CDB95;
+    --color-primary-variant: rgba(237, 245, 225, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
